--- a/rqyz-platform/pom.xml
+++ b/rqyz-platform/pom.xml
@@ -167,18 +167,18 @@
             </plugin>
         </plugins>
         <!--本地调试时注释，提交代码时，去掉注释-->
-<!--        <resources>-->
-<!--           <resource>-->
-<!--               <directory>src/main/resources</directory>-->
-<!--               <excludes>-->
-<!--                   <exclude>**/*.properties</exclude>-->
-<!--                   <exclude>**/*.yml</exclude>-->
-<!--                   <exclude>*.properties</exclude>-->
-<!--                   <exclude>*.conf</exclude>-->
-<!--                   <exclude>*.yml</exclude>-->
-<!--                   <exclude>generator/*.*</exclude>-->
-<!--               </excludes>-->
-<!--           </resource>-->
-<!--        </resources>-->
+       <resources>
+          <resource>
+            <directory>src/main/resources</directory>
+              <excludes>
+                   <exclude>**/*.properties</exclude>
+                   <exclude>**/*.yml</exclude>
+                 <exclude>*.properties</exclude>
+                  <exclude>*.conf</exclude>
+                  <exclude>*.yml</exclude>
+                   <exclude>generator/*.*</exclude>
+            </excludes>
+          </resource>
+        </resources>
     </build>
 </project>
