--- a/rqyz-platform/pom.xml
+++ b/rqyz-platform/pom.xml
@@ -153,7 +153,7 @@
     </dependencies>
 
     <build>
-        <finalName>yikesai-platform</finalName>
+        <finalName>rqyz-platform</finalName>
         <plugins>
             <!-- 编译环境 -->
             <plugin>
