--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.3.RELEASE</version>
+            </plugin>
         </plugins>
         <!--本地调试时注释，提交代码时，去掉注释-->
        <resources>
