--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,13 @@
 			<version>4.5.12</version>
 		</dependency>
 
+		<!-- unirest -->
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.9</version>
+        </dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.belerweb/pinyin4j -->
 		<dependency>
 			<groupId>com.belerweb</groupId>
