--- a/pom.xml
+++ b/pom.xml
@@ -260,7 +260,19 @@
 			<version>2.5.1</version>
 		</dependency>
 
+		<!--解析excel-->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17</version>
+		</dependency>
 
+		<!--处理2007 excel-->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml-schemas</artifactId>
+			<version>3.17</version>
+		</dependency>
 	</dependencies>
 
 	<build>
