--- a/pom.xml
+++ b/pom.xml
@@ -273,6 +273,13 @@
 			<artifactId>poi-ooxml-schemas</artifactId>
 			<version>3.17</version>
 		</dependency>
+
+		<!--MinIO JAVA SDK-->
+		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>3.0.10</version>
+		</dependency>
 	</dependencies>
 
 	<build>
